fix back botton mobile

--- a/style.css
+++ b/style.css
@@ -142,4 +142,10 @@ cursor: pointer;
         width: 3.1vw;
         height: 3.1vw;
     }
+    .closeAndBackBtn {
+        gap: 70%;
+    }
+    .backBtn {
+        align-self: center;
+    }
 }
